test/domains/compilerErrors/notsupportedOpAlign-assoc.chpl

var dfltAssociativeBase = {1, 3, 4};
writeln(dfltAssociativeBase align 3);
