test/domains/compilerErrors/notsupportedOpAlign-assoc.good
notsupportedOpAlign-assoc.chpl:3: error: cannot apply 'align' to associative and sparse domains
